// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  QuestionsFilter Component should match the snapshot when the filter is set to all 1`] = `
<div
  className="panel mb--d"
>
  <div
    className="form__group form__group--text"
  >
    <label
      className="form__label"
      htmlFor="textFilter"
    >
      <b>
        Filter by question text
      </b>
    </label>
    <input
      className="form__input"
      id="textFilter"
      onChange={[Function]}
      tabIndex={0}
    />
  </div>
  <div
    role="radiogroup"
  >
    <label
      className="form__label"
      htmlFor="filterByRole"
    >
      <b>
        Filter by directorate
      </b>
    </label>
    <div
      className="form__group form__group--radio form__group--inline"
    >
      <input
        checked={false}
        className="form__radio"
        id="filterByRole--mine"
        name="filterByRole"
        onChange={[Function]}
        type="radio"
        value={true}
      />
      <label
        className="form__label form__label--radio"
        htmlFor="filterByRole--mine"
      >
        My Directorate
      </label>
    </div>
    <div
      className="form__group form__group--radio form__group--inline"
    >
      <input
        checked={true}
        className="form__radio"
        id="filterByRole--all"
        name="filterByRole"
        onChange={[Function]}
        type="radio"
        value={false}
      />
      <label
        className="form__label form__label--radio"
        htmlFor="filterByRole--all"
      >
        All Directorates
      </label>
    </div>
  </div>
</div>
`;

exports[`[ClientApp]  QuestionsFilter Component should match the snapshot when the filter is set to directorate 1`] = `
<div
  className="panel mb--d"
>
  <div
    className="form__group form__group--text"
  >
    <label
      className="form__label"
      htmlFor="textFilter"
    >
      <b>
        Filter by question text
      </b>
    </label>
    <input
      className="form__input"
      id="textFilter"
      onChange={[Function]}
      tabIndex={0}
    />
  </div>
  <div
    role="radiogroup"
  >
    <label
      className="form__label"
      htmlFor="filterByRole"
    >
      <b>
        Filter by directorate
      </b>
    </label>
    <div
      className="form__group form__group--radio form__group--inline"
    >
      <input
        checked={false}
        className="form__radio"
        id="filterByRole--mine"
        name="filterByRole"
        onChange={[Function]}
        type="radio"
        value={true}
      />
      <label
        className="form__label form__label--radio"
        htmlFor="filterByRole--mine"
      >
        My Directorate
      </label>
    </div>
    <div
      className="form__group form__group--radio form__group--inline"
    >
      <input
        checked={false}
        className="form__radio"
        id="filterByRole--all"
        name="filterByRole"
        onChange={[Function]}
        type="radio"
        value={false}
      />
      <label
        className="form__label form__label--radio"
        htmlFor="filterByRole--all"
      >
        All Directorates
      </label>
    </div>
  </div>
</div>
`;
